# ops-library

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  README_TESTING.md  TESTING.md  galaxy.yml  justfile  pyproject.toml  requirements-docs-dev.txt  requirements-docs.txt  setup-pre-commit.sh  test_ansible_roles.py  test_apt_upgrade.sh  test_roles.py  test_runner.sh  test_service.sh  validate_docs.py
docs/: README.md  traefik-wildcard.md
docs/source/: conf.py  index.md  testing.md
roles/: README_TEMPLATE.md
roles/ansible_install/: README.md
roles/apt_upgrade_register/: README.md
roles/archive_deploy/: README.md
roles/backup_metrics_endpoint/: README.md
roles/bind_authoritative_deploy/: README.md
roles/boot_visible_i915/: README.md
roles/certbot_dns_backup/: README.md
roles/certbot_dns_deploy/: README.md
roles/certbot_dns_restore/: README.md
roles/chesslab_deploy/: README.md
roles/daybook_sessions_deploy/: README.md
roles/delve_deploy/: README.md
roles/dns_deploy/: README.md
scripts/: run-vaultwarden-molecule.sh
test/: inventory.example.yml
tests/: test_chesslab_deploy.yml  test_daybook_sessions_deploy.yml  test_daybook_weeknotes_reconcile_check_mode.yml  test_fastdeploy_self_deploy.yml  test_graphyard_auth_bootstrap_deploy.yml  test_graphyard_deploy.yml  test_graphyard_ingress_deploy.yml  test_graphyard_vector_deploy.yml  test_headless_mode.yml  test_heis_deploy.yml  test_heis_production_backup.py  test_logyard_deploy.yml  test_logyard_ingress_deploy.yml  test_logyard_vector_deploy.yml  test_marina_deploy.yml  test_netplan_config.yml  test_traefik_deploy.yml  test_traefik_remove.yml  test_vector_apt_install.yml  test_voxhelm_deploy.yml  test_voxhelm_ingress_deploy.yml  test_voxhelm_remote_worker_deploy.yml  test_wagtail_deploy.yml  test_weeknotes_home_auth_check_mode.yml  test_weeknotes_home_deploy.yml  test_weeknotes_identity_ops.py
(+2034 files in other folders)
